@@ -55,6 +55,7 @@ E(OP_SomeItemPacketMaybe)
 E(OP_SpawnDoor)
 E(OP_SpecialMesg)
 E(OP_Stun)
+E(OP_TaskDescription)
 E(OP_Track)
 E(OP_Trader)
 E(OP_TraderBuy)
