@@ -39,6 +39,7 @@ E(OP_SendCharInfo)
 E(OP_SendAATable)
 E(OP_ShopPlayerSell)
 E(OP_SpecialMesg)
+E(OP_TaskDescription)
 E(OP_Track)
 E(OP_Trader)
 E(OP_TraderBuy)
