@@ -70,6 +70,7 @@ E(OP_SpawnDoor)
 E(OP_SpecialMesg)
 E(OP_Stun)
 E(OP_TargetBuffs)
+E(OP_TaskDescription)
 E(OP_Track)
 E(OP_Trader)
 E(OP_TraderBuy)
